--- a/src/app/components/welcome/welcome.component.html
+++ b/src/app/components/welcome/welcome.component.html
@@ -1,7 +1,13 @@
 <div class="welcome">
     <div class="welcome-backdrop">
-
         <div class="welcome-top">
+            <button class="welcome-theme-button" mat-icon-button (click)="themeService.toggleDarkMode()">
+                @if (themeService.darkMode()) {
+                <mat-icon>dark_mode</mat-icon>
+                } @else {
+                <mat-icon>light_mode</mat-icon>
+                }
+            </button>
             <button class="welcome-close-button" mat-icon-button (click)="closeWelcomeScreen()">
                 <mat-icon>close</mat-icon>
             </button>
@@ -9,6 +15,7 @@
 
         <div class="welcome-content">
             <div class="welcome-content-container">
+                @if (currentOnboardingPage() === 1) {
                 <div class="welcome-logo-container">
                     <img src="icons/icon.svg" alt="Nostria logo" class="welcome-logo">
                 </div>
@@ -25,14 +32,70 @@
                         to users everywhere, no matter your location. Amplify your voice, your way!
                     </p>
                 </div>
+                } @else if (currentOnboardingPage() === 2) {
+                <div class="welcome-logo-container">
+                    <img src="icons/icon.svg" alt="Nostria logo" class="welcome-logo">
+                </div>
+                <div>
+                    <h1>Features highlights</h1>
+                    <div class="feature-highlights">
+                        <div class="feature-item">
+                            <mat-icon>explore</mat-icon>
+                            <div class="feature-text">
+                                <h3>Discovery Relays</h3>
+                                <p>Discovery Relays help you discover everyone on the Nostria network.</p>
+                            </div>
+                        </div>
+
+                        <div class="feature-item">
+                            <mat-icon>photo_library</mat-icon>
+                            <div class="feature-text">
+                                <h3>Media Library</h3>
+                                <p>Easy and powerful media library, manage your media and files.</p>
+                            </div>
+                        </div>
+
+                        <div class="feature-item">
+                            <mat-icon>public</mat-icon>
+                            <div class="feature-text">
+                                <h3>Global Scaling</h3>
+                                <p>Built to scale globally by not relying on centralized relays.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                } @else if (currentOnboardingPage() === 3) {
+                <div class="welcome-logo-container">
+                    <img src="icons/icon.svg" alt="Nostria logo" class="welcome-logo">
+                </div>
+                <div>
+                    <h1>Help us scale Nostr</h1>
+                    <p>
+                        Sign up for Nostria Premium or Premium+ to help us scale Nostr and keep the lights on.
+                    </p>
+                </div>
+                }
             </div>
         </div>
 
         <div class="welcome-footer">
-            <div class="page-indicator">Page 1 of 3</div>
+            <div class="page-indicator">Page {{currentOnboardingPage() }} of 3</div>
             <div class="welcome-actions">
+                @if (currentOnboardingPage() === 1) {
                 <button mat-button (click)="closeWelcomeScreen()">Close</button>&nbsp;
-                <button mat-flat-button color="primary" (click)="nextOnboardingPage()">Next</button>
+                }
+
+                @if (currentOnboardingPage() > 1 && currentOnboardingPage() < 4) { <button mat-button
+                    (click)="previousOnboardingPage()">Back</button>&nbsp;
+                    }
+
+                    @if (currentOnboardingPage() < 3) { <button mat-flat-button (click)="nextOnboardingPage()">
+                        Next</button>
+                        }
+
+                        @if (currentOnboardingPage() === 3) {
+                        <button mat-flat-button (click)="closeWelcomeScreen()">Get started</button>
+                        }
             </div>
         </div>
     </div>
