--- a/src/app/pages/bookmarks/bookmarks.component.scss
+++ b/src/app/pages/bookmarks/bookmarks.component.scss
@@ -180,7 +180,7 @@
 }
 
 // Dark theme adjustments
-:host-context(.dark-theme) {
+:host-context(.dark) {
   .bookmarks-container {
     .bookmarks-list {
       .bookmark-card {
