--- a/src/app/pages/bookmarks/bookmark-category-dialog/bookmark-category-dialog.component.scss
+++ b/src/app/pages/bookmarks/bookmark-category-dialog/bookmark-category-dialog.component.scss
@@ -137,7 +137,7 @@
 }
 
 // Dark theme styles
-:host-context(.dark-theme) {
+:host-context(.dark) {
   .category-dialog-container {
     .dialog-subtitle {
       color: rgba(255, 255, 255, 0.7);
