--- a/src/app/pages/people/people.component.html
+++ b/src/app/pages/people/people.component.html
@@ -126,7 +126,10 @@
         'details-list': viewMode() === 'details' || viewMode() === 'list',
         'tiles-container': viewMode() === 'tiles'      }">
           @for (pubkey of filteredPeople(); track pubkey) {
-          <app-user-profile [pubkey]="pubkey" [view]="viewMode()" [passthrough]="true" (click)="viewProfile(pubkey)"></app-user-profile>
+
+            <!-- {{ userInfoCache().get(pubkey) | json }} -->
+
+          <app-user-profile [info]="userInfoCache().get(pubkey)" [pubkey]="pubkey" [view]="viewMode()" [passthrough]="true" (click)="viewProfile(pubkey)"></app-user-profile>
           }
         </div>
       </div>
