--- a/src/app/components/user-profile/user-profile.component.html
+++ b/src/app/components/user-profile/user-profile.component.html
@@ -6,7 +6,11 @@
 
   @if (info()) {
   <div class="user-info-status" [matTooltip]="getInfoTooltip()" [matTooltipClass]="'user-profile-tooltip'">
+    @if (this.info()!['hasRelayList']) {
     <mat-icon class="user-info-icon" [class]="getInfoClass()">info</mat-icon>
+    } @else {
+    <mat-icon class="user-info-icon" [class]="getInfoClass()">warning</mat-icon>
+    }
   </div>
   }
 
