--- a/src/app/pages/profile/details/details.component.html
+++ b/src/app/pages/profile/details/details.component.html
@@ -3,27 +3,69 @@
     <button mat-icon-button class="back-button" (click)="goBack()" aria-label="Back">
       <mat-icon>arrow_back</mat-icon>
     </button>
-    
+
     <div class="profile-mini">
       @if (userProfile(); as profile) {
-        <div class="profile-mini-avatar">
-          @if (profile.picture) {
-            <img [src]="profile.picture" alt="Profile picture">
-          } @else {
-            <mat-icon>account_circle</mat-icon>
-          }
-        </div>
-        <h1 class="profile-mini-name">{{ profile.name }}'s Following</h1>
+      <div class="profile-mini-avatar">
+        @if (profile.picture) {
+        <img [src]="profile.picture" alt="Profile picture">
+        } @else {
+        <mat-icon>account_circle</mat-icon>
+        }
+      </div>
+      <h1 class="profile-mini-name">{{ profile.name }}'s Following</h1>
       } @else {
-        <div class="profile-mini-avatar">
-          <mat-icon>account_circle</mat-icon>
-        </div>
-        <h1 class="profile-mini-name">User Details</h1>
+      <div class="profile-mini-avatar">
+        <mat-icon>account_circle</mat-icon>
+      </div>
+      <h1 class="profile-mini-name">User Details</h1>
       }
     </div>
   </div>
 
-  <div>
+  <div class="info-container">
+    @if (info()) {
+
+    @if (info()['foundOnDiscoveryRelays']) {
+    <div>
+      <mat-icon>thumb_up</mat-icon> Found on Discovery Relays
+    </div>
+    }
+
+    @if (info()['foundOnAccountRelays']) {
+    <div>
+      <mat-icon>thumb_down</mat-icon> Found on Account Relays
+    </div>
+    }
+
+    @if (info()['hasRelayList']) {
+    <div>
+      <mat-icon>thumb_up</mat-icon> Has Relay List
+    </div>
+    }
+
+    @if (info()['hasRelayList'] == false) {
+    <div>
+      <mat-icon>thumb_down</mat-icon> Does not have Relay List
+    </div>
+    }
+
+    @if (info()['foundMetadataOnUserRelays']) {
+    <div>
+      <mat-icon>thumb_up</mat-icon> Found Metadata on User Relays
+    </div>
+    }
+
+    @if (info()['foundMetadataOnAccountRelays']) {
+    <div>
+      <mat-icon>thumb_down</mat-icon> Found Metadata on Account Relays
+    </div>
+    }
+
+    }
+
+<br><br><br><br>
+
     {{ info() | json }}
   </div>
 
