--- a/src/app/pages/profile/details/details.component.scss
+++ b/src/app/pages/profile/details/details.component.scss
@@ -3,6 +3,20 @@
   height: 100%;
 }
 
+.info-container {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+
+}
+
+.info-container div {
+  display: flex;
+  padding: 1rem;
+  align-items: center;
+  gap: 1rem;
+}
+
 .following-container {
   display: flex;
   flex-direction: column;
@@ -18,7 +32,8 @@
   top: 0;
   z-index: 3;
   background-color: var(--mat-sidenav-content-background-color, var(--mat-sys-background));
-  margin-bottom: 0; /* Ensure no margin at bottom */
+  margin-bottom: 0;
+  /* Ensure no margin at bottom */
 }
 
 .back-button {
@@ -66,16 +81,19 @@
   display: flex;
   flex-direction: column;
   flex: 1;
-  margin-top: 0; /* Ensure no margin at top */
-  
+  margin-top: 0;
+  /* Ensure no margin at top */
+
   ::ng-deep .mat-mdc-tab-header {
     position: sticky;
-    top: 72px; /* Adjust to exactly match the header height */
+    top: 72px;
+    /* Adjust to exactly match the header height */
     z-index: 2;
     background-color: var(--mat-sidenav-content-background-color, var(--mat-sys-background));
-    border-top: none; /* Remove any potential border */
+    border-top: none;
+    /* Remove any potential border */
   }
-  
+
   ::ng-deep .mat-mdc-tab-body-wrapper {
     flex-grow: 1;
     overflow-y: auto;
