refactor: Implement profile editing functionality and enhance user profile display

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -233,9 +233,13 @@
           </div>
           }
 
-          @if(metadata.content.name) {
+          @if(metadata.content.display_name) {
+          <h2>{{ metadata.content.display_name }}</h2>
+          }
+          @else if(metadata.content.name) {
           <h2>{{ metadata.content.name }}</h2>
-          } @else {
+          }
+          @else {
           <h2>{{ metadata.pubkey | npub }}</h2>
           }
 
