--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -158,9 +158,9 @@
     @if (!isCompactHeader()) {
     <div class="profile-actions">
       @if (isOwnProfile()) {
-      <button mat-flat-button color="primary">
+      <!-- <button mat-flat-button color="primary">
         <mat-icon>edit</mat-icon> Edit Profile
-      </button>
+      </button> -->
       } @else {
       <button mat-flat-button color="primary">
         <mat-icon>person_add</mat-icon> Follow
