--- a/src/app/pages/relays/relays.component.html
+++ b/src/app/pages/relays/relays.component.html
@@ -3,7 +3,7 @@
 
   <mat-tab-group animationDuration="300ms">
     <!-- Your Relays Tab -->
-    <mat-tab label="Your Relays">
+    <mat-tab label="User Relays">
       <div class="tab-content">
         <h2>Add New Relay</h2>
 
@@ -20,7 +20,7 @@
 
         <mat-card>
           <mat-card-header>
-            <mat-card-title>Your Relays</mat-card-title>
+            <mat-card-title>User Relays</mat-card-title>
             <mat-card-subtitle>You have {{relays().length}} relays configured</mat-card-subtitle>
           </mat-card-header>
           <mat-card-content>
@@ -66,6 +66,28 @@
           <mat-card-header>
             <mat-card-title>
               <div class="info-title">
+                <mat-icon class="info-icon">warning</mat-icon>
+                Deprecated Warning
+              </div>
+            </mat-card-title>
+          </mat-card-header>
+          <mat-card-content>
+            <p>
+              Your following list contains a list of relays. This is deprecated in the protocol.
+            </p>
+            <p>
+              We can remove these relays from your following list by clicking the button below.
+            </p>
+            <p>
+              <button mat-flat-button (click)="cleanFollowingList()">Remove Relays from Following List</button>
+            </p>
+          </mat-card-content>
+        </mat-card>
+
+        <mat-card class="info-card">
+          <mat-card-header>
+            <mat-card-title>
+              <div class="info-title">
                 <mat-icon class="info-icon">info</mat-icon>
                 How Your Relays Work
               </div>
@@ -73,17 +95,17 @@
           </mat-card-header>
           <mat-card-content>
             <p>
-              Your Relays are used to publish your profile and events for others to discovery.
+              User Relays are used to publish your profile and events for others to discovery.
             </p>
             <p>
-              Your Relays is your Home. This is where your data is stored and persisted. It's where other users retrieve
+              User Relays is your Home. This is where your data is stored and persisted. It's where other users retrieve
               your events from. Make sure you choose a relay that you trust and that is reliable.
             </p>
             <p>
               You should normally not need more than four relays. You don't need to pick the most popular relays, other
               user's will still find you thanks to Discovery Relays.
             </p>
-            <p>When you save Your Relays, your Relays List is additionally publishes to the Discovery Relays to help
+            <p>When you save User Relays, your Relays List is additionally publishes to the Discovery Relays to help
               others find you.</p>
           </mat-card-content>
         </mat-card>
