refactor: Adjust spacing in profile edit component for improved layout

--- a/src/app/pages/profile/profile-edit/profile-edit.component.html
+++ b/src/app/pages/profile/profile-edit/profile-edit.component.html
@@ -9,7 +9,7 @@
                 <span class="file-name">
                     <!-- {{selectedProfileFile?.name}} -->
                 </span>
-
+&nbsp;
                 <button type="button" mat-stroked-button (click)="profileBannerInput.click()">Choose profile
                     banner</button>
                 <input hidden (change)="onBannerFileSelected($event)" #profileBannerInput type="file" />
